--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:prod": "SET NODE_ENV=production & nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Akash Jariwala",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "@babel/polyfill": "^7.12.1",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -33,6 +34,7 @@
     "nodemailer": "^6.6.0",
     "pug": "^3.0.2",
     "sharp": "^0.28.3",
+    "slugify": "^1.5.3",
     "stripe": "^7.0.0",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
